src/test/ui/issues/issue-17728.nll.stderr
error[E0308]: match arms have incompatible types
  --> $DIR/issue-17728.rs:109:14
   |
LL | /     match to_parse {
LL | |         "w" | "west" => RoomDirection::West,
LL | |         "e" | "east" => RoomDirection::East,
LL | |         "n" | "north" => RoomDirection::North,
...  |
LL | |         "down" => RoomDirection::Down,
   | |                   ------------------- this and all prior arms are found to be of type `RoomDirection`
LL | |         _ => None
   | |              ^^^^ expected enum `RoomDirection`, found enum `std::option::Option`
LL | |     }
   | |_____- `match` arms have incompatible types
   |
   = note: expected type `RoomDirection`
              found type `std::option::Option<_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
